# photobooth

./: .gitignore  Cargo.toml  README.md
docs/: network-share-setup.md  smb.conf.example
mac/: imessage-watcher.sh  send-imessage.applescript
src/: app.rs  camera.rs  composite.rs  email.rs  main.rs  outbox.rs
