[package]
name = "photobooth"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
eframe = "0.34.3"
egui = "0.34.3"
gphoto2 = "3.4.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
lettre = { version = "0.11.22", default-features = false, features = ["smtp-transport", "builder", "pool", "rustls-tls", "hostname"] }

[profile.dev.package."*"]
opt-level = 2
